# chess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD_PARTY.md
modules/app/: CMakeLists.txt
modules/app/include/chess/app/: app.hpp
modules/app/src/: app.cpp  main.cpp
modules/common/: CMakeLists.txt
modules/common/include/chess/common/: assert.hpp  number_types.hpp
modules/engine/: CMakeLists.txt
modules/engine/include/chess/engine/: Bitboard.hpp  base.hpp  engine.hpp
modules/engine/perft/: CMakeLists.txt  perft.cpp
modules/engine/src/: engine.cpp
modules/engine/test/: CMakeLists.txt  bitboard_tests.cpp  engine_tests.cpp  file_tests.cpp  generators.hpp  perft_tests.cpp  rank_tests.cpp
scripts/: build_raylib.sh  generate_build_debug.sh  generate_build_release.sh  hot_reload.sh  hot_reload_debug.sh  hot_reload_release.sh  perft_release.sh
